[project]
name = "rescript-ast-diff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jignyas Anand Siripurapu", email = "jignyas.s@juspay.in" }
]
requires-python = ">=3.10"
dependencies=[
    "requests (>=2.32.3,<3.0.0)",
    "tree-sitter (>=0.24.0,<0.25.0)",
    "tree-sitter-rescript @ git+https://github.com/rescript-lang/tree-sitter-rescript"

]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


